@@ -1,7 +1,7 @@
 package com.CAM.GUI;
 
 import com.CAM.AddonManagement.AddonManager;
-import com.CAM.HelperTools.*;
+import com.CAM.HelperTools.ArgumentPasser;
 import com.CAM.HelperTools.GameSpecific.GameVersion;
 import com.CAM.HelperTools.IO.FileOperations;
 import com.CAM.HelperTools.IO.ReadWriteClassFiles;
